fixed search bar spacing when open

--- a/src/css/main.styl
+++ b/src/css/main.styl
@@ -116,10 +116,11 @@ header topnav
   visibility visible
   width 200px
   padding 0.5rem
+  margin-right 0.5rem
   height auto
   opacity 1
   display inline-block
-  transition width 0.4s ease-in-out, padding-left 0.4s ease-in-out, padding-right 0.4s ease-in-out
+  transition width 0.4s ease-in-out, padding-left 0.4s ease-in-out, padding-right 0.4s ease-in-out, margin-right 0.4s ease-in-out
 
 .search-box
   margin 0
@@ -129,7 +130,7 @@ header topnav
   opacity 0
   border none
   border-radius 2px
-  transition width 0.4s ease-in-out, padding-left 0.4s ease-in-out, padding-right 0.4s ease-in-out, opacity 0.6s ease-in-out 
+  transition width 0.4s ease-in-out, padding-left 0.4s ease-in-out, padding-right 0.4s ease-in-out, opacity 0.6s ease-in-out, margin-right 0.4s ease-in-out
  
 main
   display block
